# 3Dgame

./: CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  examine_tree.py
assets/models/: lamp1.glb  light.glb  sponge.glb  stick.glb  tree1.glb  tree1_original.glb
assets/shaders/: skinned.frag  skinned.vert
docs/: CharacterSystem.md
src/: CMakeLists.txt  main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.h
src/character/: Animator.cpp  Animator.h  CharacterImporter.cpp  CharacterImporter.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
src/core/: Game.cpp  Game.h  Time.cpp  Time.h
src/platform/: Window.cpp  Window.h
src/render/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/scene/: Model.cpp  Model.h  Sky.cpp  Sky.h  Terrain.cpp  Terrain.h  TerrainSampler.cpp  TerrainSampler.h  Water.cpp  Water.h
src/systems/: CollisionSystem.cpp  CollisionSystem.h  InteractionSystem.cpp  InteractionSystem.h  MonsterAI.cpp  MonsterAI.h
src/util/: FastNoiseLiteWrapper.h
tools/: analyze_models.py
